# coverage-mcp

./: .gitattributes  .gitignore  README.md  jacov.example.toml  pyproject.toml
.github/workflows/: ci.yml
src/jacov/: __init__.py  check.py  collect.py  compile.py  env.py  jacoco.py  model.py  project_registry.py  runner.py  runtests.py  server.py
tests/: test_build_result.py  test_check.py  test_collect.py  test_compile.py  test_env.py  test_jacoco_parse.py  test_project_registry.py  test_runner.py  test_runtests.py  test_server.py
tests/fixtures/: TEST-TimeTableServiceTest_unit.xml  jacoco.csv  jacoco.xml
tests/fixtures/srcroot/src/main/java/fanya/domain/strategy/teacher/: TeacherDayOfWeekParseStrategy.java
