[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jacov"
version = "0.0.1"
description = "Java 分支级、按测试类、能指到未覆盖行的 agent 覆盖率反馈器（tracer bullet 阶段）"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=7"]

# 装包后可直接用 jacov / jacov-runtests / jacov-mcp 命令（免 python -m）
[project.scripts]
jacov = "jacov.check:main"
jacov-runtests = "jacov.runtests:main"
jacov-mcp = "jacov.server:run"

[tool.setuptools.packages.find]
where = ["src"]

# pythonpath 让 pytest 无需安装即可 import jacov（src layout）
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
